// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecordingTab.vue it has the correct pristine / empty state 1`] = `
<div
  class="tab results-tab"
>
  <div
    class="tabs"
  >
    
    <button
      class="tabs__action selected"
    >
      <!--v-if-->
      <img
        src=""
        width="16"
      />
      <span
        class="tabs__action--text"
      >
        puppeteer
      </span>
    </button>
    <button
      class="tabs__action"
    >
      <span>
        🎭
      </span>
      <!--v-if-->
      <span
        class="tabs__action--text"
      >
        playwright
      </span>
    </button>
    
  </div>
  <div
    class="content"
  >
    <pre>
              
      <code>
        No code yet...
      </code>
      
      
    </pre>
  </div>
</div>
`;

exports[`RecordingTab.vue it show a code box when there is code 1`] = `
<div
  class="tab results-tab"
>
  <div
    class="tabs"
  >
    
    <button
      class="tabs__action selected"
    >
      <!--v-if-->
      <img
        src=""
        width="16"
      />
      <span
        class="tabs__action--text"
      >
        puppeteer
      </span>
    </button>
    <button
      class="tabs__action"
    >
      <span>
        🎭
      </span>
      <!--v-if-->
      <span
        class="tabs__action--text"
      >
        playwright
      </span>
    </button>
    
  </div>
  <div
    class="content"
  >
    <pre>
              
      <code
        class="javascript hljs"
      >
        <span
          class="hljs-keyword"
        >
          await
        </span>
         page.click(
        <span
          class="hljs-string"
        >
          '.class'
        </span>
        )
      </code>
      
      
    </pre>
  </div>
</div>
`;
